; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_addi_watchdog.c_addi_watchdog_insn_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_addi_watchdog.c_addi_watchdog_insn_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i32 }
%struct.comedi_subdevice = type { i32, %struct.addi_watchdog_private* }
%struct.addi_watchdog_private = type { i32, i64 }
%struct.comedi_insn = type { i32 }

@ADDI_TCW_CTRL_ENA = common dso_local global i32 0, align 4
@ADDI_TCW_RELOAD_REG = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [32 x i8] c"watchdog enabled, timeout:%dms\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@ADDI_TCW_CTRL_REG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.comedi_device*, %struct.comedi_subdevice*, %struct.comedi_insn*, i32*)* @addi_watchdog_insn_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @addi_watchdog_insn_config(%struct.comedi_device* %0, %struct.comedi_subdevice* %1, %struct.comedi_insn* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.comedi_device*, align 8
  %7 = alloca %struct.comedi_subdevice*, align 8
  %8 = alloca %struct.comedi_insn*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.addi_watchdog_private*, align 8
  %11 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %6, align 8
  store %struct.comedi_subdevice* %1, %struct.comedi_subdevice** %7, align 8
  store %struct.comedi_insn* %2, %struct.comedi_insn** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %7, align 8
  %13 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %12, i32 0, i32 1
  %14 = load %struct.addi_watchdog_private*, %struct.addi_watchdog_private** %13, align 8
  store %struct.addi_watchdog_private* %14, %struct.addi_watchdog_private** %10, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %46 [
    i32 129, label %18
    i32 128, label %43
  ]

18:                                               ; preds = %4
  %19 = load i32, i32* @ADDI_TCW_CTRL_ENA, align 4
  %20 = load %struct.addi_watchdog_private*, %struct.addi_watchdog_private** %10, align 8
  %21 = getelementptr inbounds %struct.addi_watchdog_private, %struct.addi_watchdog_private* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %7, align 8
  %26 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = and i32 %24, %27
  store i32 %28, i32* %11, align 4
  %29 = load i32, i32* %11, align 4
  %30 = load %struct.addi_watchdog_private*, %struct.addi_watchdog_private** %10, align 8
  %31 = getelementptr inbounds %struct.addi_watchdog_private, %struct.addi_watchdog_private* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @ADDI_TCW_RELOAD_REG, align 8
  %34 = add nsw i64 %32, %33
  %35 = call i32 @outl(i32 %29, i64 %34)
  %36 = load %struct.comedi_device*, %struct.comedi_device** %6, align 8
  %37 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* %11, align 4
  %40 = mul i32 20, %39
  %41 = add i32 %40, 20
  %42 = call i32 @dev_info(i32 %38, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %41)
  br label %49

43:                                               ; preds = %4
  %44 = load %struct.addi_watchdog_private*, %struct.addi_watchdog_private** %10, align 8
  %45 = getelementptr inbounds %struct.addi_watchdog_private, %struct.addi_watchdog_private* %44, i32 0, i32 0
  store i32 0, i32* %45, align 8
  br label %49

46:                                               ; preds = %4
  %47 = load i32, i32* @EINVAL, align 4
  %48 = sub nsw i32 0, %47
  store i32 %48, i32* %5, align 4
  br label %62

49:                                               ; preds = %43, %18
  %50 = load %struct.addi_watchdog_private*, %struct.addi_watchdog_private** %10, align 8
  %51 = getelementptr inbounds %struct.addi_watchdog_private, %struct.addi_watchdog_private* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 8
  %53 = load %struct.addi_watchdog_private*, %struct.addi_watchdog_private** %10, align 8
  %54 = getelementptr inbounds %struct.addi_watchdog_private, %struct.addi_watchdog_private* %53, i32 0, i32 1
  %55 = load i64, i64* %54, align 8
  %56 = load i64, i64* @ADDI_TCW_CTRL_REG, align 8
  %57 = add nsw i64 %55, %56
  %58 = call i32 @outl(i32 %52, i64 %57)
  %59 = load %struct.comedi_insn*, %struct.comedi_insn** %8, align 8
  %60 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %59, i32 0, i32 0
  %61 = load i32, i32* %60, align 4
  store i32 %61, i32* %5, align 4
  br label %62

62:                                               ; preds = %49, %46
  %63 = load i32, i32* %5, align 4
  ret i32 %63
}

declare dso_local i32 @outl(i32, i64) #1

declare dso_local i32 @dev_info(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
